Prevent client from sending request if file size is too large

--- a/src/components/PostForm/PostForm.module.css
+++ b/src/components/PostForm/PostForm.module.css
@@ -135,7 +135,7 @@
   overflow-y: scroll;
 
   & img {
-    width: 100%;
+    max-width: 100%;
     height: auto;
   }
 }
